<resources>
    <string name="app_name">Lab 21</string>
    <string name="interval">Интервал:</string>
    <string name="minutes">Минуты:</string>
    <string name="seconds">Секунды:</string>
    <string name="go">Пуск</string>
    <string name="ready">Таймер готов к запуску</string>
    <string name="stop">Стоп</string>
    <string name="no_permission">Нет разрешения на уведомления</string>
    <string name="timer">Таймер</string>
    <string name="timer_notifications">Уведомления таймера</string>
</resources>