<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        android:id="@+id/tvInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interval"
        android:textSize="22sp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etMinutes"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="0"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seconds"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etSeconds"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="30"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnStartStop"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:text="@string/go"
        android:textColor="#fff"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:textSize="18sp"/>
</LinearLayout>